Quorum/Library/Tests/TypeChecker/Pass/ExpAssignObjectBoolObj.quorum
class Main
    action Main
        Boolean b
        Object o        
        b:SetValue(true)
        o = cast(Object, b)
        if o:Equals(b)
            output "passed"
        end
    end
end
