Quorum/Library/Tests/TypeChecker/Fail/ExpAssignNumObjBoolObj.quorum
class main
    action Main
        Boolean b
        Number num
        b:SetValue(true)
        num = cast(Number, b)
    end
end